# rust-ice-20250530

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/ice_proc_macro/: Cargo.toml
crates/ice_proc_macro/src/: lib.rs
crates/ice_test/: Cargo.toml
crates/ice_test/src/: main.rs
