[package]
name = "ice_proc_macro"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
