[package]
name = "ice_test"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
ice_proc_macro.workspace = true
